plugins {
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id "org.sonarqube" version "5.1.0.4882"
	id 'checkstyle'
	id 'jacoco'
}

group = 'uk.co.nstauthority'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

def fileUploadLibraryVersion = 'v3.0.0'

repositories {
  mavenCentral()
  maven {
    // Required for opensaml deps
    url "https://build.shibboleth.net/nexus/content/repositories/releases/"
  }
  maven { url "https://nexus.fivium.co.uk/repository/maven-releases/" }
  maven { url "https://nexus.fivium.co.uk/repository/maven-snapshots/" }
}

dependencies {
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.security:spring-security-saml2-service-provider'
	implementation "org.springframework.session:spring-session-core"
	implementation "org.springframework.session:spring-session-jdbc"
	implementation "org.springframework.data:spring-data-envers"
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'uk.co.fivium.energyportalapi:client:v20.0.0'
	implementation 'uk.co.fivium.energyportal.accounts:energy-portal-accounts-spring-boot-starter:v8.0.1'
	implementation 'uk.co.fivium.energyportalmessagequeue:spring-boot-starter:v4.3.0'
	implementation 'uk.co.fivium.feedbackmanagementservice:client:v2.3.0'
	implementation 'uk.co.fivium.digitalformlibrary:digital-form-library:v3.0.0'
	implementation "uk.co.fivium:digital-document-library-spring-boot-starter:v3.6.0"
	implementation 'uk.co.fivium:digital-enum-materialisation-library-spring-boot-starter:v1.1.2'
	implementation 'uk.co.fivium:digital-notification-library-spring-boot-starter:v1.1.0'
// TODO re-add when payments required
//	implementation 'uk.co.fivium:digital-payments-library-spring-boot-starter:1.0.0'
	implementation "uk.co.fivium:file-upload-spring-boot-starter:${fileUploadLibraryVersion}"
	implementation 'uk.co.fivium:ftss-client-spring-boot-starter:v1.0.0'
	implementation project(":gis-framework")
	implementation 'org.apache.commons:commons-collections4:4.4'
	implementation 'org.apache.commons:commons-lang3:3.18.0'
	implementation 'org.apache.commons:commons-text:1.13.0'
	implementation 'commons-validator:commons-validator:1.10.1'
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.6.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.6.0'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
	implementation 'net.ttddyy.observation:datasource-micrometer-spring-boot:1.1.1'

	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation "uk.co.fivium:file-upload-spring-boot-starter-test:${fileUploadLibraryVersion}"
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testImplementation "org.testcontainers:testcontainers"
	testImplementation "org.testcontainers:postgresql"
}

tasks {
	test {
		useJUnitPlatform()
		finalizedBy jacocoTestReport
		systemProperty 'spring.profiles.active', 'test'
		maxParallelForks 4
	}
	bootJar {
		archiveFileName.set("${rootProject.name}.jar")
		exclude('**/localdevonly/**')
	}
}

sonarqube {
	properties {
		property 'sonar.exclusions', '**/nstauthority/licensingmanagementservice/mockups/**'
		property 'sonar.projectKey', "Fivium_${rootProject.name}"
		property 'sonar.organization', 'fivium-gh'
		property 'sonar.host.url', 'https://sonarcloud.io'
		property 'sonar.login', System.getenv('SONARCLOUD_TOKEN')

		if (System.getenv('DRONE_PULL_REQUEST') != null) {
			property 'sonar.pullrequest.key', System.getenv('DRONE_PULL_REQUEST')
			property 'sonar.pullrequest.base', System.getenv('DRONE_TARGET_BRANCH')
			property 'sonar.pullrequest.branch', System.getenv('DRONE_SOURCE_BRANCH')
			property 'sonar.pullrequest.provider', 'github'
			property 'sonar.pullrequest.github.repository', "${rootProject.name}"
			property 'sonar.pullrequest.github.endpoint', 'https://api.github.com/'
		} else {
			property 'sonar.branch.name', System.getenv('DRONE_BRANCH')
			if (System.getenv('DRONE_BRANCH') != 'develop') {
				property 'sonar.branch.target', 'develop'
			}
			property 'sonar.coverage.jacoco.xmlReportPaths',
					"${layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml," +
							"${project(':gis-framework').layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml"

		}
	}
}

project(":gis-framework") {
	sonarqube {
		properties {
			property 'sonar.javascript.lcov.reportPaths', 'arcgis-node/coverage/lcov.info'
			property 'sonar.sources',
					sourceSets.main.java.srcDirs.findAll { it.exists() }.collect { it.path }.join(',') +
							',arcgis-node/src'
			property 'sonar.tests',
					sourceSets.test.java.srcDirs.findAll { it.exists() }.collect { it.path }.join(',') +
							',arcgis-node/tests'
		}
	}
}

checkstyle {
	config = rootProject.resources.text.fromFile('devtools-lms/checkstyle.xml')
	toolVersion '10.26.0'
	ignoreFailures = false
	maxWarnings = 0
}

jacocoTestReport {
	reports {
		xml.required = true
	}
}